--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* GENERAL */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 * {
     margin: 0;
@@ -21,14 +21,14 @@ p {
 
 /* TRANSITION */
 
-a, 
+a,
 .btn {
-    transition: all  300ms ease;
+    transition: all 300ms ease;
 }
 
 /* DESKTOP NAV */
 
-nav, 
+nav,
 .nav-links {
     display: flex;
 }
@@ -150,7 +150,7 @@ a:hover {
 
 section {
     padding-top: 4vh;
-    height: 96vh;
+    /* height: 96vh; */
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
@@ -264,7 +264,8 @@ section {
 /* ABOUT SECTION */
 
 #about {
-    position: relative;
+    /* position: relative; */
+    height: 96vh;
 }
 
 .about-containers {
@@ -317,7 +318,7 @@ section {
 /* EXPERIENCE SECTION */
 
 #experience {
-    position: relative;
+    /* position: relative; */
 }
 
 .experience-sub-title {
@@ -331,6 +332,73 @@ section {
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+.experience-containers {
+    margin: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.experience-card {
+    padding: 1.5rem 3rem;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 2rem;
+    /* margin-bottom: 1rem; */
+    width: 70%;
+
+    .experience-card__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem 0.5rem;
+        border-bottom: 1px solid rgb(216, 216, 216);
+
+        .experience-card__header__designation {
+            font-size: 1.35rem;
+            font-weight: 500;
+            color: rgb(58, 58, 58);
+        }
+
+        .experience-card__header__logo-container__name {
+            font-size: 1.1rem;
+            font-weight: 500;
+            color: rgb(54, 54, 54);
+        }
+    }
+
+    .experience-card__body {
+        margin: 2rem 0;
+        font-size: 0.8rem;
+        font-weight: 400;
+    }
+
+    .experience-card__body__description {
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 1rem;
+    }
+
+    .experience-card__body__description__pointer {
+        margin-right: 1rem;
+        height: 100%;
+    }
+
+    .experience-card__body__description__content {
+        width: 90%;
+    }
+
+    .experience-card__footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem 0.5rem;
+        font-size: 0.9rem;
+        color: rgb(85, 85, 85);
+    }
 }
 
 .article-container {
@@ -356,7 +424,14 @@ article .icon {
 /* PROJECTS SECTION */
 
 #projects {
-    position: relative;
+    /* position: relative; */
+}
+
+.project__description__points {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 2rem;
 }
 
 .color-container {
@@ -426,10 +501,10 @@ footer {
     height: 26vh;
     margin: 0 1rem;
 }
-  
+
 footer p {
     color: rgb(85, 85, 85);
     font-size: 1.5rem;
     font-weight: 600;
     text-align: center;
-}  
+}
