Added responsive fixes and contact phone info.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -84,6 +84,11 @@
     .experience-card__header__logo-container__name {
         text-align: center;
     }
+    .contact-info-upper-container {
+        flex-direction: column;
+        gap: 1.2rem;
+        padding: 5%;
+    }
     .logo {
         font-size: 1.5rem;
     }
