--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -10,6 +10,30 @@
     #projects {
         height: fit-content;
     }
+    .project-containers {
+        display: block;
+        margin: 0 13.5%;
+    }
+    .project-card {
+        width: 70%;
+        margin-bottom: 2rem;
+        display: flex;
+        margin: 3rem 10%;
+
+        .project-card__image {
+            width: 100%;
+            margin-right: 1rem;
+        }
+
+        .project-card__content {
+            margin-left: 0rem;
+            width: 100%;
+        }
+        .project-card__content_title {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -44,6 +68,30 @@
     }
     .about-containers {
         margin-top: 0;
+    }
+    .project-containers {
+        display: block;
+        margin: 0 13.5%;
+    }
+    .project-card {
+        width: 70%;
+        margin-bottom: 2rem;
+        display: flex;
+        margin: 3rem 10%;
+
+        .project-card__image {
+            width: 100%;
+            margin-right: 1rem;
+        }
+
+        .project-card__content {
+            margin-left: 0rem;
+            width: 100%;
+        }
+        .project-card__content_title {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
     }
 }
 
@@ -110,6 +158,29 @@
     }
     .text-container {
         text-align: justify;
+    }
+    .project-containers {
+        display: block;
+        margin: 0;
+    }
+    .project-card {
+        width: 60%;
+        margin-bottom: 2rem;
+        display: block;
+        margin: 3rem 10%;
+
+        .project-card__image {
+            width: 100%;
+        }
+
+        .project-card__content {
+            margin-left: 0rem;
+            width: 100%;
+        }
+        .project-card__content_title {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
     }
 }
   
