--- a/style.css
+++ b/style.css
@@ -427,32 +427,82 @@ article .icon {
     /* position: relative; */
 }
 
-.project__description__points {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 2rem;
-}
-
-.color-container {
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
-}
-
 .project-img {
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
-}
-
-.project-title {
-    margin: 1rem;
-    color: black;
+    width: 95%;
+    height: 95%;
 }
 
 .project-btn {
     color: black;
     border-color: rgb(163, 163, 163);
+}
+
+.project-containers {
+    margin: 0rem 9.5%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.project-card {
+    padding: 1rem 2rem;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 2rem;
+    /* margin-bottom: 1rem; */
+    width: 42%;
+    display: flex;
+
+    .project-card__image {
+        width: 45%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .project-card__content {
+        margin-left: 1rem;
+        width: 55%;
+        
+        .project-card__content_title {
+            font-size: 1.35rem;
+            font-weight: 500;
+            color: rgb(58, 58, 58);
+            margin-bottom: 0.5rem;
+            border-bottom: 1px solid rgb(216, 216, 216);
+            padding-bottom: 1rem;
+        }
+
+        .project-card__content_points {
+            display: flex;
+
+            .project-card__content__bullet__pointer {
+                margin-right: 1rem;
+                height: 100%;
+            }
+            .project-card__content__point__content {
+                width: 100%;
+            }
+        }
+
+        .project-card__content_link {
+            margin-top: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+.project-card__content__style {
+    display: flex;
+}
+
+.project-card__content__pointer__style {
+    margin-right: 1rem;
 }
 
 /* CONTACT */
